loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:16: error: not found: value foward
foward() 
^